--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^3.0.3",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "js-base64": "^3.7.5"
+    "@apollo/client": "^3.8.10",
+    "apollo-server": "^3.13.0",
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.8.1",
+    "js-base64": "^3.7.5",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.0"
   }
 }
