--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql": "^16.8.1",
     "js-base64": "^3.7.5",
     "mysql": "^2.18.1",
-    "mysql2": "^3.9.0"
+    "mysql2": "^3.9.0",
+    "puppeteer": "^22.12.1"
   }
 }
